<resources>
    <string name="app_name">TalkApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleApp">Welcom !</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="dontAccount">Dont have an Account?</string>
    <string name="haveAccount">Have Account !</string>
    <string name="entermessage">Enter Message Here</string>
    <string name="message"> Message</string>
    <string name="editname"> Enter your Name</string>
    <string name="editemail"> Enter your Email</string>
    <string name="editpassword"> Enter your Password</string>
    <string name="editRepassword"> Enter your Re-Password</string>
    <string name="signOut"> Sign out </string>
    <string name="delete_message">Delete message</string>
    <string name="edit_message">Edit message</string>
    <string name="edited_message">Edited</string>

</resources>